--- a/android/build.gradle
+++ b/android/build.gradle
@@ -35,6 +35,6 @@ android {
 }
 
 dependencies {
-    implementation 'cn.jiguang.sdk:jpush:4.6.0'
+    implementation 'cn.jiguang.sdk:jpush:4.1。5'
     implementation 'cn.jiguang.sdk:jcore:3.2.2'
 }
