--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.jiguang.jpush">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application>
         <receiver
             android:name="com.jiguang.jpush.JPushPlugin$JPushReceiver"
